# as_blog

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Getting Started.ipynb  LICENSE  Makefile  README.md  dump_doc.py  pyproject.toml  test_styles.py
src/snippets/: bills  dick_smithy1.py  save_sc6.py  sep_concerns2.py  sep_concerns3.py  sep_concerns4.py  sep_concerns5.py  sep_concerns6.py  sep_concerns7.py  sep_concerns_1.py  sep_concerns_2.py  sep_concerns_3.py  sep_concerns_4.py  sep_concerns_6.py  test  test_snippet_extraction.py
src/tools/: build-fixtures.py  build_fixtures.py  doc_utils.py  docs.py  mcve.py  parse_blog.py  serve.py  snippets.py  styles.py  walk_blog.py
test_data/defaults/: users.json
test_data/fixtures/: test_data_02.dbm
test_data/src/: test_data_01.json  test_data_02.json
tests/: test_create.py  test_sep_concerns_5.py  test_sep_concerns_7.py  test_snippets.py
web/: about.html  blog-bits.html  blog-list.html  blog-post.html  blog-sample.html  dammit.html  header.html  index.html  item.html  list_articles.html  meta.html  stuff.html  test-1.html  test-form.html  test.html
web/assets/css/: theme-1.css  theme-2.css  theme-3.css  theme-4.css  theme-5.css  theme-6.css  theme-7.css  theme-8.css
web/assets/scss/: theme-1.scss  theme-2.scss  theme-3.scss  theme-4.scss  theme-5.scss  theme-6.scss  theme-7.scss  theme-8.scss
web/assets/scss/theme/: _about.scss  _base.scss  _blog.scss  _demo.scss  _mixins.scss  _responsive.scss  styles.scss
